@@ -2,14 +2,9 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming, Statistics, and
           Simulation
-Version: 0.96-7
-Date: 2013-09-19
-Authors@R:
-          c(person("Martin","Elff",role=c("aut","cre"),email="martin.elff@uni-konstanz.de"),
-          person(c("Christopher"," N."),"Lawrence",role="ctb"),
-          person(c("Jason","W."),"Morgan",role="ctb"),
-          person("Achim","Zeileis",role="ctb"), person("Dave","Atkins",role="ctb") )
-Author: Martin Elff
+Version: 0.96-8
+Date: 2013-12-04
+Author: Martin Elff (with contributions by Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, and Achim Zeileis)
 Maintainer: Martin Elff <martin.elff@uni-konstanz.de>
 Description: One of the aims of this package is to make life easier for
         useRs who deal with survey data sets. It provides an
